--- a/abtest.ipynb
+++ b/abtest.ipynb
@@ -2739,7 +2739,7 @@
     "# Chi-squared Test:\n",
     "Statistic: 54.32 indicates a strong association between the groups and whether they were shown ads.\n",
     "P-value: 1.71×10−131.71×10−13 suggests that the association is statistically significant (typically, a p-value less than 0.05 is considered significant).\n",
-    " ### we can agreer with  our altanative hypothesis that indeed show ads increases conversion"
+    " ### we can agree with  our altanative hypothesis that indeed show ads increases conversion"
    ]
   },
   {
